--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,63 @@
-// TODO
+.container {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.posts {
+  a {
+    display: block;
+  }
+
+  & + a {
+    margin-top: 3rem;
+  }
+
+  strong {
+    display: block;
+    font-weight: 700;
+    font-size: 1.75rem;
+    line-height: 2.125rem;
+    transition: color 0.2s;
+    color: var(--gray-100);
+  }
+
+  p {
+    color: var(--gray-200);
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    line-height: 1.375rem;
+  }
+
+  .infoContainer {
+    display: flex;
+    margin-top: 1.5rem;
+
+    div {
+      display: flex;
+
+      time, span, svg {
+        color: var(--gray-300);
+        font-size: 0.875rem;
+        line-height: 1.063rem;
+      }
+
+      svg {
+        margin-right: 0.5rem;
+      }
+
+      & + div {
+        margin-left: 1.5rem;
+      }
+    }
+  }
+}
+
+.button {
+  margin-top: 4rem;
+  color: var(--pink-500);
+  font-weight: 600;
+  border: 0;
+  background: transparent;
+  font-size: 1.125rem;
+}
